{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 3105,
  "lineage": "ab96a90c-c0d7-179d-9302-a54090fcbfa4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e88167b74d0918ac",
            "domain": "vpc",
            "id": "eipalloc-0e88167b74d0918ac",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-52-193-208-209.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.193.208.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NGW-EIP-01"
            },
            "tags_all": {
              "Name": "NGW-EIP-01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb1494904b179646",
            "domain": "vpc",
            "id": "eipalloc-0bb1494904b179646",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-72-46-192.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.72.46.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NGW-EIP-02"
            },
            "tags_all": {
              "Name": "NGW-EIP-02"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0531cc8f84d38123e",
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:instance/i-079ada4692fb0318c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-SSM",
            "id": "i-079ada4692fb0318c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-089242123bd7b15b9",
            "private_dns": "ip-10-1-2-90.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb104fe0a93f5f9e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ba115f3a925b979",
            "tags": {
              "Name": "Django-01"
            },
            "tags_all": {
              "Name": "Django-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088f3def0924ba224"
            ]
          },
          "dependencies": [
            "aws_ami_copy.Django_ami",
            "aws_security_group.web_security_group",
            "aws_subnet.Tokyo-Private-1",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0531cc8f84d38123e",
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:instance/i-0cf477c9cc9f65ba6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-SSM",
            "id": "i-0cf477c9cc9f65ba6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f6be0143efa4c18d",
            "private_dns": "ip-10-1-12-40.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.12.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc5a9a6c7895cb3d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abb8a98eacce9b0c",
            "tags": {
              "Name": "Django-02"
            },
            "tags_all": {
              "Name": "Django-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088f3def0924ba224"
            ]
          },
          "dependencies": [
            "aws_ami_copy.Django_ami",
            "aws_security_group.web_security_group",
            "aws_subnet.Tokyo-Private-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:internet-gateway/igw-00a9cdc6f345230a2",
            "id": "igw-00a9cdc6f345230a2",
            "owner_id": "417574981094",
            "tags": {
              "Name": "Tokyo-igw"
            },
            "tags_all": {
              "Name": "Tokyo-igw"
            },
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:loadbalancer/app/web-lb/17948b7fb5be5cf9",
            "arn_suffix": "app/web-lb/17948b7fb5be5cf9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-lb-464440924.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:loadbalancer/app/web-lb/17948b7fb5be5cf9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a43679b9afe0f87f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-066ebc352aa1fc83f"
              },
              {
                "subnet_id": "subnet-0d9002e0cd7e91c4a"
              }
            ],
            "subnets": [
              "subnet-066ebc352aa1fc83f",
              "subnet-0d9002e0cd7e91c4a"
            ],
            "tags": {
              "Name": "Django_web-ALB"
            },
            "tags_all": {
              "Name": "Django_web-ALB"
            },
            "vpc_id": "vpc-0ba6775f3e440e8cd",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.lb_security_group",
            "aws_subnet.Tokyo-Public-1",
            "aws_subnet.Tokyo-Public-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:listener/app/web-lb/17948b7fb5be5cf9/f3559e22ddd4eeb8",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:417574981094:certificate/135fc005-95e9-4f87-a18e-ecb05bc4f624",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:targetgroup/web-tg20230324024452046000000011/61f7c61e4e17aea7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:listener/app/web-lb/17948b7fb5be5cf9/f3559e22ddd4eeb8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:loadbalancer/app/web-lb/17948b7fb5be5cf9",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ami_copy.Django_ami",
            "aws_autoscaling_group.Django_autoscaling_group",
            "aws_launch_template.Django_launch_template",
            "aws_lb.main",
            "aws_lb_target_group.web_target_group",
            "aws_security_group.lb_security_group",
            "aws_security_group.web_security_group",
            "aws_subnet.Tokyo-Private-1",
            "aws_subnet.Tokyo-Private-2",
            "aws_subnet.Tokyo-Public-1",
            "aws_subnet.Tokyo-Public-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:listener/app/web-lb/17948b7fb5be5cf9/95ba1dc0d02f4f09",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:listener/app/web-lb/17948b7fb5be5cf9/95ba1dc0d02f4f09",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:loadbalancer/app/web-lb/17948b7fb5be5cf9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.lb_security_group",
            "aws_subnet.Tokyo-Public-1",
            "aws_subnet.Tokyo-Public-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:targetgroup/web-tg20230324024452046000000011/61f7c61e4e17aea7",
            "arn_suffix": "targetgroup/web-tg20230324024452046000000011/61f7c61e4e17aea7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:targetgroup/web-tg20230324024452046000000011/61f7c61e4e17aea7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-tg20230324024452046000000011",
            "name_prefix": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_ami_copy.Django_ami",
            "aws_autoscaling_group.Django_autoscaling_group",
            "aws_launch_template.Django_launch_template",
            "aws_security_group.web_security_group",
            "aws_subnet.Tokyo-Private-1",
            "aws_subnet.Tokyo-Private-2",
            "aws_vpc.tokyo_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_ec2-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:targetgroup/web-tg20230324024452046000000011/61f7c61e4e17aea7-20230324024453458100000013",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:targetgroup/web-tg20230324024452046000000011/61f7c61e4e17aea7",
            "target_id": "i-079ada4692fb0318c"
          },
          "dependencies": [
            "aws_ami_copy.Django_ami",
            "aws_autoscaling_group.Django_autoscaling_group",
            "aws_instance.private_ec2_01",
            "aws_launch_template.Django_launch_template",
            "aws_lb_target_group.web_target_group",
            "aws_security_group.web_security_group",
            "aws_subnet.Tokyo-Private-1",
            "aws_subnet.Tokyo-Private-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_ec2-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:targetgroup/web-tg20230324024452046000000011/61f7c61e4e17aea7-20230324024453347200000012",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:417574981094:targetgroup/web-tg20230324024452046000000011/61f7c61e4e17aea7",
            "target_id": "i-0cf477c9cc9f65ba6"
          },
          "dependencies": [
            "aws_ami_copy.Django_ami",
            "aws_autoscaling_group.Django_autoscaling_group",
            "aws_instance.private_ec2_02",
            "aws_launch_template.Django_launch_template",
            "aws_lb_target_group.web_target_group",
            "aws_security_group.web_security_group",
            "aws_subnet.Tokyo-Private-1",
            "aws_subnet.Tokyo-Private-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e88167b74d0918ac",
            "connectivity_type": "public",
            "id": "nat-0395770e506ca5050",
            "network_interface_id": "eni-0ad2a6001939388c1",
            "private_ip": "10.1.1.121",
            "public_ip": "52.193.208.209",
            "subnet_id": "subnet-0d9002e0cd7e91c4a",
            "tags": {
              "Name": "Tokyo-ngw-a"
            },
            "tags_all": {
              "Name": "Tokyo-ngw-a"
            }
          },
          "dependencies": [
            "aws_eip.eip-01",
            "aws_subnet.Tokyo-Public-1",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb1494904b179646",
            "connectivity_type": "public",
            "id": "nat-0842f58c04b7e146f",
            "network_interface_id": "eni-0a41ec6013a280fbd",
            "private_ip": "10.1.11.149",
            "public_ip": "35.72.46.192",
            "subnet_id": "subnet-066ebc352aa1fc83f",
            "tags": {
              "Name": "Tokyo-ngw-b"
            },
            "tags_all": {
              "Name": "Tokyo-ngw-b"
            }
          },
          "dependencies": [
            "aws_eip.eip-02",
            "aws_subnet.Tokyo-Public-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Tokyo_RT-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:route-table/rtb-0d9abaaea416e2b48",
            "id": "rtb-0d9abaaea416e2b48",
            "owner_id": "417574981094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a9cdc6f345230a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tokyo RT1"
            },
            "tags_all": {
              "Name": "Tokyo RT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Tokyo_RT-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:route-table/rtb-08af9e4a2c6e76bf2",
            "id": "rtb-08af9e4a2c6e76bf2",
            "owner_id": "417574981094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0395770e506ca5050",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tokyo RT-2"
            },
            "tags_all": {
              "Name": "Tokyo RT-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-01",
            "aws_nat_gateway.ngw-01",
            "aws_subnet.Tokyo-Public-1",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Tokyo_RT-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:route-table/rtb-064f5c1fb8cdc04f3",
            "id": "rtb-064f5c1fb8cdc04f3",
            "owner_id": "417574981094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0842f58c04b7e146f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tokyo RT-3"
            },
            "tags_all": {
              "Name": "Tokyo RT-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-02",
            "aws_nat_gateway.ngw-02",
            "aws_subnet.Tokyo-Public-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba26992323aa2dcb",
            "route_table_id": "rtb-08af9e4a2c6e76bf2",
            "subnet_id": "subnet-06ba115f3a925b979"
          },
          "dependencies": [
            "aws_eip.eip-01",
            "aws_nat_gateway.ngw-01",
            "aws_route_table.Tokyo_RT-2",
            "aws_subnet.Tokyo-Private-1",
            "aws_subnet.Tokyo-Public-1",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d4d22c73017d12f",
            "route_table_id": "rtb-08af9e4a2c6e76bf2",
            "subnet_id": "subnet-0504a0ee17488e209"
          },
          "dependencies": [
            "aws_eip.eip-01",
            "aws_nat_gateway.ngw-01",
            "aws_route_table.Tokyo_RT-2",
            "aws_subnet.Tokyo-Private-3",
            "aws_subnet.Tokyo-Public-1",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cf8ca61ed4b6564",
            "route_table_id": "rtb-064f5c1fb8cdc04f3",
            "subnet_id": "subnet-0abb8a98eacce9b0c"
          },
          "dependencies": [
            "aws_eip.eip-02",
            "aws_nat_gateway.ngw-02",
            "aws_route_table.Tokyo_RT-3",
            "aws_subnet.Tokyo-Private-2",
            "aws_subnet.Tokyo-Public-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta-04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047f19a4a97057f2f",
            "route_table_id": "rtb-064f5c1fb8cdc04f3",
            "subnet_id": "subnet-02d0d1138f063e3f1"
          },
          "dependencies": [
            "aws_eip.eip-02",
            "aws_nat_gateway.ngw-02",
            "aws_route_table.Tokyo_RT-3",
            "aws_subnet.Tokyo-Private-4",
            "aws_subnet.Tokyo-Public-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fc2d041238284c3",
            "route_table_id": "rtb-0d9abaaea416e2b48",
            "subnet_id": "subnet-0d9002e0cd7e91c4a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Tokyo_RT-1",
            "aws_subnet.Tokyo-Public-1",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049e79b3a58cfed54",
            "route_table_id": "rtb-0d9abaaea416e2b48",
            "subnet_id": "subnet-066ebc352aa1fc83f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Tokyo_RT-1",
            "aws_subnet.Tokyo-Public-2",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:security-group/sg-0db9c842b87085176",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db9c842b87085176",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow DB Port",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "db-security-group20230324023938809900000004",
            "name_prefix": "db-security-group",
            "owner_id": "417574981094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow DB,SSH"
            },
            "tags_all": {
              "Name": "Allow DB,SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:security-group/sg-019549a460cc649fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019549a460cc649fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "My HTTPS SG20230324023938809400000003",
            "name_prefix": "My HTTPS SG",
            "owner_id": "417574981094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTPS"
            },
            "tags_all": {
              "Name": "Allow HTTPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:security-group/sg-0a43679b9afe0f87f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a43679b9afe0f87f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-security-group20230324023938805700000002",
            "name_prefix": "lb-security-group",
            "owner_id": "417574981094",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_efs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:security-group/sg-0a590ce12e0263cb5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a590ce12e0263cb5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-088f3def0924ba224"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "web-efs-security-group2023032402395015970000000c",
            "name_prefix": "web-efs-security-group",
            "owner_id": "417574981094",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:security-group/sg-088f3def0924ba224",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088f3def0924ba224",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-security-group20230324023938811500000005",
            "name_prefix": "web-security-group",
            "owner_id": "417574981094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH,HTTP,Django"
            },
            "tags_all": {
              "Name": "Allow SSH,HTTP,Django"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tokyo-Private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:subnet/subnet-06ba115f3a925b979",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ba115f3a925b979",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417574981094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo-Private-1a"
            },
            "tags_all": {
              "Name": "Tokyo-Private-1a"
            },
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tokyo-Private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:subnet/subnet-0abb8a98eacce9b0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abb8a98eacce9b0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417574981094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo-Private-1c"
            },
            "tags_all": {
              "Name": "Tokyo-Private-1c"
            },
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tokyo-Private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:subnet/subnet-0504a0ee17488e209",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0504a0ee17488e209",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417574981094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo-Private-2a"
            },
            "tags_all": {
              "Name": "Tokyo-Private-2a"
            },
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tokyo-Private-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:subnet/subnet-02d0d1138f063e3f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d0d1138f063e3f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417574981094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo-Private-2c"
            },
            "tags_all": {
              "Name": "Tokyo-Private-2c"
            },
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tokyo-Public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:subnet/subnet-0d9002e0cd7e91c4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9002e0cd7e91c4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417574981094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo-Public-1a"
            },
            "tags_all": {
              "Name": "Tokyo-Public-1a"
            },
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tokyo-Public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:subnet/subnet-066ebc352aa1fc83f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066ebc352aa1fc83f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417574981094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tokyo-Public-1c"
            },
            "tags_all": {
              "Name": "Tokyo-Public-1c"
            },
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:vpc/vpc-0ba6775f3e440e8cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03b9e4591581073dd",
            "default_route_table_id": "rtb-0a9ae5408948b2002",
            "default_security_group_id": "sg-0dc8ef47bd3aff0b6",
            "dhcp_options_id": "dopt-0c0be8ae6b405e224",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba6775f3e440e8cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9ae5408948b2002",
            "owner_id": "417574981094",
            "tags": {
              "Name": "Tokyo-VPC"
            },
            "tags_all": {
              "Name": "Tokyo-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:vpc-endpoint/vpce-06cc891884acc9cf5",
            "dns_entry": [
              {
                "dns_name": "vpce-06cc891884acc9cf5-zzsvxcum.ec2.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-06cc891884acc9cf5-zzsvxcum-ap-northeast-1a.ec2.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z10410983DEWUVIMSA4KC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-06cc891884acc9cf5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01317b07d88ce11f0"
            ],
            "owner_id": "417574981094",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-019549a460cc649fe"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-06ba115f3a925b979"
            ],
            "tags": {
              "Name": "ec2_endpoint"
            },
            "tags_all": {
              "Name": "ec2_endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_security_group.https_sg",
            "aws_subnet.Tokyo-Private-1",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:vpc-endpoint/vpce-096a83f72f10ab21f",
            "dns_entry": [
              {
                "dns_name": "vpce-096a83f72f10ab21f-bac24pyg.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-096a83f72f10ab21f-bac24pyg-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z00372452OK32GW76OQ53"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-096a83f72f10ab21f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0335c9198a11d9891"
            ],
            "owner_id": "417574981094",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-019549a460cc649fe"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-06ba115f3a925b979"
            ],
            "tags": {
              "Name": "ec2message_endpoint"
            },
            "tags_all": {
              "Name": "ec2message_endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_security_group.https_sg",
            "aws_subnet.Tokyo-Private-1",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:vpc-endpoint/vpce-0be62e3077c0c25c4",
            "dns_entry": [
              {
                "dns_name": "vpce-0be62e3077c0c25c4-8uzrmcae.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0be62e3077c0c25c4-8uzrmcae-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z1040661PGBGI3F2T65B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0be62e3077c0c25c4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09b0545001ed62bb5"
            ],
            "owner_id": "417574981094",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-019549a460cc649fe"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-06ba115f3a925b979"
            ],
            "tags": {
              "Name": "ssm_endpoint"
            },
            "tags_all": {
              "Name": "ssm_endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_security_group.https_sg",
            "aws_subnet.Tokyo-Private-1",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:417574981094:vpc-endpoint/vpce-0f247691108d93a1b",
            "dns_entry": [
              {
                "dns_name": "vpce-0f247691108d93a1b-4eg3rntn.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f247691108d93a1b-4eg3rntn-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z10411023UF63S4YXNT52"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0f247691108d93a1b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-083ba59d174fb24e3"
            ],
            "owner_id": "417574981094",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-019549a460cc649fe"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-06ba115f3a925b979"
            ],
            "tags": {
              "Name": "ssmmessages_endpoint"
            },
            "tags_all": {
              "Name": "ssmmessages_endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ba6775f3e440e8cd"
          },
          "dependencies": [
            "aws_security_group.https_sg",
            "aws_subnet.Tokyo-Private-1",
            "aws_vpc.tokyo_vpc"
          ]
        }
      ]
    }
  ]
}